Fix val_comp button spacing.

--- a/src/components/val_layout.module.css
+++ b/src/components/val_layout.module.css
@@ -125,7 +125,7 @@ th td {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  margin-top: 10%;
+  margin-top: 10vw;
   margin-left: 20%;
   width: 60%;
 }
